2010-06-02 02:14  Charles Pence <charles@charlespence.net>

	* Makefile, build/mcc: Now that we're not *using* the Symbolic Math
	  Toolbox any longer, we can build binaries. Binary-building code
	  re-added.

2010-06-01 15:43  Julia Philip <jtophilip@gmail.com>

	* src/MTBindingSim.m: Changed the color counter to reset when a graph is
	  drawn.

2010-06-01 15:14  Julia Philip <jtophilip@gmail.com>

	* src/MTBindingSim.m: Fixed a bug in resetting the color counter when
	  the graph is closed.

2010-06-01 15:06  Julia Philip <jtophilip@gmail.com>

	* src/MTBindingSim.m, src/seam_lattice_binding.m: Changed legend text to
	  include N.

2010-05-31 21:27  Julia Philip <jtophilip@gmail.com>

	* src/MTBindingSim.m: Improved the comments in MTBindingSim.

2010-05-31 18:36  Julia Philip <jtophilip@gmail.com>

	* src/MTBindingSim.m: Rearranged function order and added section
	  labels.

2010-05-31 17:36  Julia Philip <jtophilip@gmail.com>

	* src/seam_lattice_binding.m, src/seam_lattice_saturation.m: Improved
	  the comments for seam_lattice_bindinding and seam_lattice_saturation.

2010-05-31 17:23  Julia Philip <jtophilip@gmail.com>

	* src/MAP2_binding.m, src/MAP2_saturation.m: Improved the comments in
	  MAP2_saturation and MAP2_binding.

2010-05-31 17:11  Julia Philip <jtophilip@gmail.com>

	* src/MAP2_binding.m: Improved the comments on MAP2_binding.

2010-05-31 17:03  Julia Philip <jtophilip@gmail.com>

	* src/MAP_saturation.m: Improved comments in MAP_saturation.

2010-05-31 16:45  Julia Philip <jtophilip@gmail.com>

	* src/MAP2_binding.m, src/MAP2_saturation.m, src/MAP_binding.m,
	  src/MAP_saturation.m, src/competition.m, src/cooperativity_binding.m,
	  src/cooperativity_saturation.m, src/first_order_saturation.m,
	  src/seam_lattice_binding.m, src/seam_lattice_saturation.m: Fixed a
	  problem with the for loops in the calculation code.

2010-05-31 16:41  Julia Philip <jtophilip@gmail.com>

	* src/MAP_binding.m: Improved the comments in MAP_binding.
