@@ -1,3 +1,14 @@
+2010-06-03 13:38  Charles Pence <charles@charlespence.net>
+
+	* ChangeLog, Makefile, doc/OperatingSystem.rst: Added information about
+	  how to determine if your operating system is 32-bit or 64-bit. See
+	  issue 1. Updated Makefile to only build docs by default.
+
+2010-06-03 12:06  Charles Pence <charles@charlespence.net>
+
+	* build/googlecode_upload.py: Added a script to upload files to Google
+	  Code.
+
 2010-06-02 02:14  Charles Pence <charles@charlespence.net>
 
 	* Makefile, build/mcc: Now that we're not *using* the Symbolic Math
